<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FKSiS-Schedule</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="access_key">Access key</string>
    <string name="scan_code">Scan Code</string>
    <string name="log_in">Log in</string>
    <string name="preferences">Preferences</string>
    <string name="refresh">Refresh</string>
    <string name="synchronization_complete">Synchronization complete</string>
    <string name="synchronization_failed">Synchronization failed</string>
    <string name="connection_error">Connection Error</string>
    <string name="invalid_message">Empty message or incorrect date</string>
    <string name="schedule">Schedule</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="group_message">Message for group</string>
    <string name="post_end_date">Select day</string>
    <string name="post">Post</string>

    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="role_preference">user_role</string>

    <string name="settings_category">User Settings</string>
    <string name="other_category">Other</string>

    <string name="reload_preference">reload</string>
    <string name="reload_title">Automatic reload</string>
    <string name="reload_summary">Update schedule on launch</string>

    <string name="log_out_preference">log_out</string>
    <string name="log_out_title">Log out</string>

    <string name="group_preference">group</string>
    <string name="group_title">Group</string>
    <string name="group_not_selected">Not selected</string>

    <string name="subgroup_preference">sub_group</string>
    <string name="subgroup_title">Subgroup</string>
    <string name="no_classes">No classes</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="subgroup_text">subgroup</string>

    <string-array name="subgroups">
        <item>Both</item>
        <item>First</item>
        <item>Second</item>
    </string-array>

    <string-array name="subgroupValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="timeSlotStart">
        <item>8:00</item>
        <item>9:45</item>
        <item>11:40</item>
        <item>13:25</item>
        <item>15:20</item>
        <item>17:05</item>
        <item>18:45</item>
        <item>20:25</item>
    </string-array>

    <string-array name="timeSlotEnd">
        <item>9:35</item>
        <item>11:20</item>
        <item>13:15</item>
        <item>15:00</item>
        <item>16:55</item>
        <item>18:40</item>
        <item>20:20</item>
        <item>22:00</item>
    </string-array>

    <string-array name="specialRoles">
        <item>EX_DEAN</item>
        <item>DEAN</item>
        <item>SECRETARY</item>
        <item>GROUP_MONITOR</item>
    </string-array>
</resources>
